Replace DefaultHttpClient with HttpConnection in services